--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -88,6 +88,10 @@
             ],
             "styles": [
               "src/styles.scss"
+            ],
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
             ]
           }
         }
